# pydy

./: .env.test  .gitignore  Makefile.toml  Pipfile  README.md  docker-compose.yml  dynamodb_testdata.bash  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: pull_request.yml
src/: cli.py  create.py  delete.py  desc.py  drop.py  get.py  list.py  put.py  pydy.py  query.py  scan.py  update.py  util.py
tests/: conftest.py
tests/e2e/: test_cli.py
tests/e2e/json/: Forum.json  ProductCatalog.json  Reply.json  Thread.json
tests/unit/: test_cli.py  test_util.py
