[tool.black]
line-length = 79
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
)
'''

[tool.poetry]
name = "pydy"
version = "0.1.0"
description = "DynamoDB CLI"
authors = ["watarukura <what.r.j150@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.14.2"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"
tox = "^3.15.2"
pytest = "^5.4.3"
isort = "^4.3.21"
pytest-cov = "^2.10.0"
mypy = "^0.780"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"